# azionapi-rust-sdk

./: LICENSE  README.md
data_streaming/: Cargo.toml  README.md
data_streaming/.openapi-generator/: FILES
data_streaming/docs/: CreateCustomDataStreamingResponse.md  CreateDataStreamingResponse.md  CreateNewDataStreaming201Response.md  CreateNewDataStreamingRequest.md  CustomDataStreamingPostBody.md  DataStreamingApi.md  DataStreamingDomainApi.md  DataStreamingEndpointTypeDatadogDts.md  DataStreamingEndpointTypeKafka.md  DataStreamingEndpointTypeStandard.md  DataStreamingEndpointTypeStandardHeadersExample.md  DataStreamingPostBody.md  DataStreamingResponseGetResultTypeCustom.md  DataStreamingResponseGetResultTypeDatadogDts.md  DataStreamingResponseGetResultTypeKafka.md  DataStreamingResponseGetResultTypeStandard.md  DataStreamingResponseWithResults.md  DataStreamingResponseWithResultsResultsInner.md  DataStreamingTemplatesApi.md  DataStreamingsById.md  DataStreamingsDomainResponse.md  DataStreamingsDomainResponseLinks.md  DataStreamingsDomainResult.md  EndpoinrtS3.md  EndpointAwsKinesisFirehose.md  EndpointAzureBlobStorage.md  EndpointAzureMonitor.md  EndpointDatadog.md  EndpointDefault.md  EndpointElasticsearch.md  EndpointGoogleBigQuery.md  EndpointGoogleBigQueryServiceAccountKey.md  EndpointIbmQRadar.md  EndpointKafka.md  EndpointSplunk.md  PostCustomDataStreamingResponse.md  PostDataStreamingResponse.md  PostDataStreamingResponseEndpointInner.md  StandardDataStreamingPostBody.md  Template.md  (+2 more)
data_streaming/src/apis/: configuration.rs  data_streaming_api.rs  mod.rs  (+2 more)
(+684 files in other folders)
